--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,10 +1,15 @@
 pipeline{
-    agent any
-    stages{
-        stage('scm checkout')
-        {
-            steps{ git branch: 'master', url: 'https://github.com/Abhinav501-eng/mavenproject1' }
+    agent any{
+        stages{
+                stage('scm checkout'){
+                    steps{git branch: 'master', url: 'https://github.com/Abhinav501-eng/mavenproject1'}
+                }
+                stages('mevan testing'){
+                    steps{withMaven(globalMavenSettingsConfig: '', jdk: 'JAVA_HOME', maven: 'MAVEN_HOME', mavenSettingsConfig: '', traceability: true) {
+    // some block
+}}0}
+                }
+        
         }
     }
-
 }
